--- a/src/index.scss
+++ b/src/index.scss
@@ -10,45 +10,45 @@ body {
   --color-base-1: #8aae7e;
   --color-base-3: rgb(138, 174, 126);
   --color-base-2: #12441f;
-  
+
   --color-ok-1: #3f3d10;
   --color-ok-2: #38462c;
   --color-ok-3: #585a3c;
   --color-ok-4: #587455;
   --color-ok-5: #7cae7d;
   --color-ok-6: #b6d285;
-  
+
   --color-ko-1: #ae3112;
   --color-ko-2: #bf4502;
   --color-ko-3: #da3a03;
   --color-ko-4: #e34d3f;
   --color-ko-5: #ef5b28;
   --color-ko-6: #f77f50;
-  
+
   --color-no-1: #082d3f;
   --color-no-2: #1a2f52;
   --color-no-3: #354c77;
   --color-no-4: #206a83;
   --color-no-5: #67c7f2;
   --color-no-6: #bbdcff;
-  
+
   --color-br-1: #342222;
   --color-br-2: #47271b;
   --color-br-3: #523b2f;
   --color-br-4: #6f5035;
   --color-br-5: #aa8963;
   --color-br-6: #cdae97;
-  
+
   --color-light: #e3f0e9;
   --color-dark: #0f1a10;
-  
+
   --color-near: var(--color-dark);
   --color-far: var(--color-light);
-  
+
   --color-light-far: #e3f0e933;
   --color-light-near: #0f1a1033;
 
-  
+
   --color-accent: #8e9f43;
   --color-primary: #0f1a10;
   --color-primary-dark: #38462c;
@@ -57,27 +57,27 @@ body {
   --color-gray: #999;
   background-color: var(--color-primary);
 
-  
+
   --between-mgroped: .5px;
   --opacity-default: .80;
   --opacity-active: .99;
   --size-font-base: 20px;
   --radius-border-1-3: 1.3em;
   --radius-border-2-4: .7em;
-  
+
   --svg-color: var(--color-far);
   color: var(--color-far);
   overscroll-behavior: none;
-  
+
 }
 
 body.light-theme {
   --color-ok-6: #587455;
   --color-ok-4: #b6d285;
-  
+
   --color-far: var(--color-dark);
   --color-near: var(--color-light);
-  
+
   --color-light-near: #e3f0e933;
   --color-light-far: #0f1a1033;
 
@@ -96,41 +96,41 @@ body {
   --color-base-1: #8aae7e;
   --color-base-3: rgb(138, 174, 126);
   --color-base-2: #12441f;
-  
+
   --color-ok-1: #3f3d10;
   --color-ok-2: #38462c;
   --color-ok-3: #585a3c;
   --color-ok-4: #587455;
   --color-ok-5: #7cae7d;
   --color-ok-6: #b6d285;
-  
+
   --color-ko-1: #ae3112;
   --color-ko-2: #bf4502;
   --color-ko-3: #da3a03;
   --color-ko-4: #e34d3f;
   --color-ko-5: #ef5b28;
   --color-ko-6: #f77f50;
-  
+
   --color-no-1: #082d3f;
   --color-no-2: #1a2f52;
   --color-no-3: #354c77;
   --color-no-4: #206a83;
   --color-no-5: #67c7f2;
   --color-no-6: #bbdcff;
-  
+
   --color-br-1: #342222;
   --color-br-2: #47271b;
   --color-br-3: #523b2f;
   --color-br-4: #6f5035;
   --color-br-5: #aa8963;
   --color-br-6: #cdae97;
-  
+
   --color-light: #e3f0e9;
   --color-dark: #0f1a10;
-  
+
   --color-near: var(--color-dark);
   --color-far: var(--color-light);
-  
+
   --color-light-far: #e3f0e933;
   --color-light-near: #0f1a1033;
 }
@@ -142,18 +142,18 @@ body {
   --size-font-base: 20px;
   --radius-border-1-3: 1.3em;
   --radius-border-2-4: .7em;
-  
+
   --svg-color: var(--color-far);
   color: var(--color-far);
   overscroll-behavior: none;
-  
+
   &.light-theme {
     --color-ok-6: #587455;
     --color-ok-4: #b6d285;
-    
+
     --color-far: var(--color-dark);
     --color-near: var(--color-light);
-    
+
     --color-light-near: #e3f0e933;
     --color-light-far: #0f1a1033;
   }
@@ -161,15 +161,16 @@ body {
 
 body {
   background-color: var(--color-near);
-  
+
   :not(.user-select) {
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
   }
-  
-  & .user-select, & .user-select * {
+
+  & .user-select,
+  & .user-select * {
     -moz-user-select: text;
     -webkit-user-select: text;
     -ms-user-select: text;
@@ -177,10 +178,11 @@ body {
   }
 }
 
-html, body {
+html,
+body {
   padding: 0;
   margin: 0;
-  
+
   width: 100vw;
   height: 100vh;
   font-family: main;
@@ -191,7 +193,8 @@ html, body {
   src: url(./resource/avenir-next.ttf);
 }
 
-.mdisabled, :disabled {
+.mdisabled,
+:disabled {
   filter: brightness(.5);
 }
 
@@ -201,24 +204,29 @@ html, body {
 
 .scrollable {
   overflow: auto;
-  
-  &, &-x, &-y {
+
+  &,
+  &-x,
+  &-y {
     &.no-scroll::-webkit-scrollbar {
       display: none;
     }
   }
-  
-  &, &-x {
+
+  &,
+  &-x {
     max-width: 100%;
   }
-  
-  &, &-y {
+
+  &,
+  &-y {
     max-height: 100%;
   }
-  
+
   &-x {
     overflow-x: auto;
   }
+
   &-y {
     overflow-y: auto;
   }
@@ -226,7 +234,7 @@ html, body {
 
 .mbtn {
   --svg-color: var(--color-dark);
-  
+
   display: inline-block;
   vertical-align: middle;
   border: none;
@@ -237,13 +245,15 @@ html, body {
   opacity: var(--opacity-default);
   box-sizing: border-box;
   background-color: #cccc;
-  
-  &, .ellipsis {
+  cursor: pointer;
+
+  &,
+  .ellipsis {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
   }
-  
+
   svg {
     width: var(--size);
     height: calc(var(--size) * 1.7);
@@ -258,28 +268,28 @@ html, body {
 .mgroup {
   display: inline-block;
   white-space: nowrap;
-  
-  :not(&) > .mbtn {
+
+  :not(&)>.mbtn {
     border-radius: var(--radius-border-1-3) var(--radius-border-2-4);
-    
+
     &:not(.mblock) {
       margin: .15em;
     }
   }
-  
-  > *:first-child {
+
+  >*:first-child {
     border-top-left-radius: var(--radius-border-1-3);
     border-bottom-left-radius: var(--radius-border-2-4);
     margin-right: var(--between-mgroped);
   }
-   
-  > *:last-child {
+
+  >*:last-child {
     border-top-right-radius: var(--radius-border-2-4);
     border-bottom-right-radius: var(--radius-border-1-3);
     margin-left: var(--between-mgroped);
   }
-  
-  > *:not(:last-child):not(:first-child) {
+
+  >*:not(:last-child):not(:first-child) {
     border-radius: 0;
     margin-left: var(--between-mgroped);
     margin-right: var(--between-mgroped);
@@ -300,15 +310,15 @@ html, body {
 
 .cleared-input {
   padding-right: 1em;
-  
-  + .clear-button {
+
+  +.clear-button {
     position: relative;
     display: block;
     bottom: 2em;
     left: calc(100% - 1.5em);
     width: 0;
     height: 0;
-    
+
     &:after {
       content: '×';
       display: inline-block;
@@ -321,19 +331,22 @@ html, body {
 
 .mblock {
   width: 100%;
-  
-  &, .mgroup {
+
+  &,
+  .mgroup {
     display: inline-block;
     margin: .15em 0;
   }
 }
 
 .mprogressed {
-  &:before, &:after {
+
+  &:before,
+  &:after {
     position: absolute;
     display: block;
   }
-  
+
   &:before {
     width: 100%;
     height: 100%;
@@ -346,8 +359,9 @@ html, body {
 
 .m--ok {
   background-color: var(--color-ok-2);
-  
-  &, & + .clear-button {
+
+  &,
+  &+.clear-button {
     color: var(--color-ok-5);
   }
 }
@@ -360,8 +374,9 @@ html, body {
 
 .m--br {
   background-color: var(--color-br-2);
-  
-  &, & + .clear-button {
+
+  &,
+  &+.clear-button {
     color: var(--color-br-5);
   }
 }
@@ -374,8 +389,9 @@ html, body {
 
 .m--ko {
   background-color: var(--color-ko-1);
-  
-  &, & + .clear-button {
+
+  &,
+  &+.clear-button {
     color: var(--color-ko-6);
   }
 }
@@ -388,8 +404,9 @@ html, body {
 
 .m--no {
   background-color: var(--color-no-2);
-  
-  &, & + .clear-button {
+
+  &,
+  &+.clear-button {
     color: var(--color-no-5);
   }
 }
@@ -399,47 +416,67 @@ html, body {
   color: var(--color-no-2);
 }
 
-.mgroup > .mbtn {
+.mgroup>.mbtn {
   min-width: calc(var(--size) * 2);
   max-height: calc(var(--size) * 1.712);
 }
 
-.mxs, .msm, .mmd, .mlg {
+.mxs,
+.msm,
+.mmd,
+.mlg {
   min-width: calc(var(--size) * 2);
   max-height: calc(var(--size) * 1.712);
-  
-  &, & + .clear-button {
+
+  &,
+  &+.clear-button {
     font-size: var(--size);
   }
 }
 
 .mxs {
-  &.mgroup > .mbtn, & {
-    &, & + .clear-button {
+
+  &.mgroup>.mbtn,
+  & {
+
+    &,
+    &+.clear-button {
       --size: 10px;
     }
   }
 }
 
 .msm {
-  &.mgroup > .mbtn, & {
-    &, & + .clear-button {
+
+  &.mgroup>.mbtn,
+  & {
+
+    &,
+    &+.clear-button {
       --size: 15px;
     }
   }
 }
 
 .mmd {
-  &.mgroup > .mbtn, & {
-    &, & + .clear-button {
+
+  &.mgroup>.mbtn,
+  & {
+
+    &,
+    &+.clear-button {
       --size: 20px;
     }
   }
 }
- 
+
 .mlg {
-  &.mgroup > .mbtn, & {
-    &, & + .clear-button {
+
+  &.mgroup>.mbtn,
+  & {
+
+    &,
+    &+.clear-button {
       --size: 30px;
     }
   }
@@ -465,7 +502,7 @@ html, body {
 .modal-toast {
   position: absolute;
   bottom: 10px;
-  
+
 }
 
 .app-toast-window.toast {
@@ -479,7 +516,7 @@ html, body {
   user-select: none;
 }
 
-.app-toast-window.toast > .toast-line {
+.app-toast-window.toast>.toast-line {
   position: absolute;
   display: flex;
   justify-content: space-around;
@@ -487,7 +524,7 @@ html, body {
   width: 100%;
 }
 
-.app-toast-window.toast > .toast-line > .toast {
+.app-toast-window.toast>.toast-line>.toast {
   display: inline-block;
   padding: 10px;
   border-radius: 5px;
@@ -508,12 +545,12 @@ html, body {
   width: 100%;
   height: 100%;
   align-items: center;
-  
+
   ::-webkit-scrollbar {
     display: none;
   }
-  
-  > .app-modal {
+
+  >.app-modal {
     display: inline-block;
     margin: auto;
     width: 500px;
@@ -523,40 +560,40 @@ html, body {
     border: solid 1px #ddd;
     border-radius: 5px;
     background-color: var(--color-ok-6);
-    
-    > .app-modal-title {
+
+    >.app-modal-title {
       display: flex;
       justify-content: space-between;
       background-color: var(--bgcolor-title);
       color: var(--color-primary);
       padding: 5px;
       max-height: 2em;
-      
-      > .app-modal-title-close-icon {
+
+      >.app-modal-title-close-icon {
         cursor: pointer;
         font-weight: bolder;
       }
     }
-    
-    > .app-modal-body {
+
+    >.app-modal-body {
       padding: 0px 5px;
       max-height: calc(100vh - 5em);
       overflow-y: auto;
       overflow-x: hidden;
-      
+
       &.with-error {
         max-height: calc(100% - 6.2em);
       }
-      
-      > .app-modal-body-inner {
-        > .app-modal-description {
+
+      >.app-modal-body-inner {
+        >.app-modal-description {
           padding: 10px 0;
         }
-        
-        > .app-modal-body-input-list {
+
+        >.app-modal-body-input-list {
           padding: 10px 0;
-          
-          > .app-modal-body-input-list-item > .app-modal-body-input-list-item-input {
+
+          >.app-modal-body-input-list-item>.app-modal-body-input-list-item-input {
             width: 100%;
             min-height: 2em;
             outline: none;
@@ -564,24 +601,24 @@ html, body {
         }
       }
     }
-    
-    > .app-modal-footer {
-      > .app-modal-footer-error {
+
+    >.app-modal-footer {
+      >.app-modal-footer-error {
         padding: 0px 5px;
         color: red;
       }
-      
-      > .app-modal-footer-button-list {
+
+      >.app-modal-footer-button-list {
         overflow-x: auto;
         overflow-y: hidden;
         height: 1.5em;
         padding: 10px 5px;
-        
-        > .app-modal-footer-button-list-inner {
+
+        >.app-modal-footer-button-list-inner {
           display: inline-block;
           white-space: nowrap;
-          
-          > .app-modal-footer-button-list-item {
+
+          >.app-modal-footer-button-list-item {
             border: solid 1px #999;
             border-radius: 3px;
             background-color: #ccc;
@@ -599,11 +636,11 @@ html, body {
   width: 3px;
   height: 3px;
 }
- 
+
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 10px rgba(0,0,0,.3);
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, .3);
 }
- 
+
 ::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   outline: 1px solid slategrey;
@@ -616,48 +653,56 @@ html, body {
   display: -ms-flexbox;
   display: flex;
 }
+
 .flex-center {
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
 }
+
 .flex-start {
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
 }
+
 .flex-middle {
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
 }
+
 .flex-baseline {
   -webkit-box-align: baseline;
   -webkit-align-items: baseline;
   -ms-flex-align: baseline;
   align-items: baseline;
 }
+
 .flex-end {
   -webkit-box-align: end;
   -webkit-align-items: flex-end;
   -ms-flex-align: end;
   align-items: flex-end;
 }
+
 .flex-horizontal-end {
   -webkit-box-pack: end;
   -webkit-justify-content: flex-end;
   -ms-flex-pack: end;
   justify-content: flex-end;
 }
+
 .flex-between {
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
 }
+
 .flex-column {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -665,6 +710,7 @@ html, body {
   -ms-flex-direction: column;
   flex-direction: column;
 }
+
 .flex-row {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -672,8 +718,3 @@ html, body {
   -ms-flex-direction: row;
   flex-direction: row;
 }
-
-
-
-
-
