--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -197,6 +201,7 @@ body {
 .mdisabled,
 :disabled {
   filter: brightness(.5);
+  pointer-events: none;
 }
 
 .mupper {
@@ -240,24 +245,26 @@ body {
   vertical-align: middle;
   border: none;
   outline: 0;
-  padding: 0 1em;
+  padding: 3px 1em;
   height: 2em;
   font-size: 1em;
   opacity: var(--opacity-default);
   box-sizing: border-box;
   background-color: #cccc;
   cursor: pointer;
+  color: var(--color-dark);
+
+  >svg {
+    margin-top: -3px;
+    width: var(--size);
+    height: calc(var(--size) * 1.7);
+  }
 
   &,
   .ellipsis {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-  }
-
-  svg {
-    width: var(--size);
-    height: calc(var(--size) * 1.7);
   }
 }
 
