--- a/src/components/apps/cm/col/cat/Cat.scss
+++ b/src/components/apps/cm/col/cat/Cat.scss
@@ -30,41 +30,10 @@
         }
     }
 
-    >.com-list {
-        max-height: var(--content-height);
-        overflow: auto;
-        transition: padding .2s;
+    .later-com-list {
 
-        >.coms-count {}
-
-        .com-face {
-            --size: 2.5em;
-            --number-border-size: 2px;
-
-            position: relative;
-            display: flex;
-            height: var(--size);
-            align-items: center;
-            padding: 0 .4em;
-            margin-bottom: calc(var(--number-border-size) * 2 + 2px);
-            cursor: pointer;
-
-            >.number {
-
-                position: absolute;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                background: var(--color-3);
-                border-radius: 50%;
-                width: var(--size);
-                height: var(--size);
-                border: solid 2px transparent;
-            }
-
-            >.title {
-                margin-left: calc(2.5em + 1em);
-            }
+        &.hidden {
+            display: none;
         }
     }
 }
