--- a/src/components/apps/cm/col/com/Com.scss
+++ b/src/components/apps/cm/col/com/Com.scss
@@ -15,10 +15,39 @@
             }
         }
     }
+
+    .com-face {
+        --size: 2.5em;
+        --number-border-size: 2px;
+
+        position: relative;
+        display: flex;
+        height: var(--size);
+        align-items: center;
+        padding: 0 .4em;
+        margin-bottom: calc(var(--number-border-size) * 2 + 2px);
+        cursor: pointer;
+
+        >.number {
+
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: var(--color-3);
+            border-radius: 50%;
+            width: var(--size);
+            height: var(--size);
+            border: solid 2px transparent;
+        }
+
+        >.title {
+            margin-left: calc(2.5em + 1em);
+        }
+    }
 }
 
 .com-container {
-
     .setting-popup {
         position: absolute;
         left: 0;
