--- a/src/components/apps/cm/Cm.scss
+++ b/src/components/apps/cm/Cm.scss
@@ -204,16 +204,23 @@ body {
         }
 
         &.bottom-mode {
+            --max-height: 70vh;
             position: absolute;
             left: 0;
-            bottom: 0;
+            bottom: calc(0px - var(--max-height));
             width: 100vw;
-            max-height: 70vh;
+            max-height: var(--max-height);
             background-color: var(--color-3);
             overflow: hidden;
             height: 300px;
             padding: 30px;
             z-index: 150;
+            // animation: rise-up-absolute-bottom-popup 1s;
+            transition: bottom .5s;
+
+            &.open {
+                bottom: 0;
+            }
 
             .item {
                 padding: 10px 0;
@@ -237,15 +244,18 @@ body {
                     }
                 }
             }
-
-            bottom: 0;
-            left: 0;
-            width: 100vw;
         }
     }
 
 
-
+@keyframes rise-up-absolute-bottom-popup {
+    from {
+        bottom: calc(0px - var(--max-height));
+    }
+    to {
+        bottom: 0;
+    }
+}
 
 
 
