--- a/src/components/apps/cm/col/cat/Cat.scss
+++ b/src/components/apps/cm/col/cat/Cat.scss
@@ -14,6 +14,7 @@
             border-radius: calc(var(--main-gap) * 3);
             background-color: var(--color-1);
             padding: var(--main-gap);
+            width: 100%;
 
             .filter-input {
                 width: calc(100% - 60px);
