--- a/src/components/apps/cm/base/brutal-item/BrutalItem.scss
+++ b/src/components/apps/cm/base/brutal-item/BrutalItem.scss
@@ -3,7 +3,7 @@
     --brutal-item-gap-v: 7px;
 
     border-radius: 10px;
-    background-color: var(--color-1);
+    background-color: var(--color--2);
     width: 100%;
     height: var(--brutal-item-height);
     cursor: pointer;
