--- a/src/components/apps/cm/col/cat/Cat.scss
+++ b/src/components/apps/cm/col/cat/Cat.scss
@@ -12,7 +12,7 @@
             height: var(--height);
             box-sizing: border-box;
             border-radius: calc(var(--main-gap) * 3);
-            background-color: var(--color-1);
+            background-color: var(--color--2);
             padding: var(--main-gap);
             width: 100%;
 
