--- a/src/components/apps/cm/Cm.scss
+++ b/src/components/apps/cm/Cm.scss
@@ -3,68 +3,10 @@ body {
 }
 
 .app-container.cm {
-    --font-size: 16px;
-    --com-player-signaler-size: 50px;
-
-    --color-1: #e6e4c0;
-    --color-2: #e7edde;
-    --color-3: #f2f0e0;
-    --color-4: #4f4e46;
-    --color-5: #1d192b;
-
-    --main-gap: 8px;
-    --main-big-gap: 18px;
-    --header-height: 10px;
-    --header-container-height: 60px;
-    --footer-height: 70px;
-    --fullscreen-transition: top .3s, bottom .3s, height .3s, margin-top .3s;
-
-    --header-container-margin-top: 0;
-    --header-top: 0;
-    --header-container-top: var(--header-height);
-    --footer-bottom: 0;
-
-    --svg-color: var(--color-4);
-
-    .main-gap-v {
-        margin-left: var(--main-gap);
-        margin-right: var(--main-gap);
-    }
-
-    .main-gap-h {
-        margin-top: var(--main-gap);
-        margin-bottom: var(--main-gap);
-    }
-
-    .main-gap {
-        margin: var(--main-gap);
-    }
-
-    .main-big-gap-v {
-        margin-left: var(--main-big-gap);
-        margin-right: var(--main-big-gap);
-    }
-
-    .main-big-gap-h {
-        margin-top: var(--main-big-gap);
-        margin-bottom: var(--main-big-gap);
-    }
-
-    .main-big-gap {
-        margin: var(--main-big-gap);
-    }
-
-    font-size: var(--font-size);
     overflow: hidden;
     position: relative;
     height: 100vh;
-    color: var(--color-4);
-
-    // Выделенная область(тёмный беж)  e6e4c0
-    // Фон (белый с оттенком зелёного)   e7edde
-    // Навигационный бар и топ бар (белый + желт)  f2f0e0
-    // Основной шрифт и иконки (тёмный серый+корич)  4f4e46
-    // Выбранный пункт (темнее серый + корич) 1d192b
+    color: var(--color--4);
 
     >.main-container {
         --content-height: calc(100vh - var(--header-height) - var(--header-container-height) - var(--footer-height));
@@ -96,7 +38,7 @@ body {
             position: static;
             margin-top: var(--header-top);
             width: 100vw;
-            background-color: var(--color-3);
+            background-color: var(--color--1);
             height: var(--header-height);
             transition: var(--fullscreen-transition);
         }
@@ -104,7 +46,7 @@ body {
         >.content {
             position: static;
             width: 100vw;
-            background-color: var(--color-2);
+            background-color: var(--color--5);
             overflow: hidden;
             transition: var(--fullscreen-transition);
 
@@ -114,7 +56,7 @@ body {
 
             .header-content {
                 width: 100vw;
-                background-color: var(--color-3);
+                background-color: var(--color--1);
                 height: var(--header-container-height);
                 padding: var(--main-gap);
                 margin-top: var(--header-container-margin-top);
@@ -144,7 +86,7 @@ body {
             display: flex;
             justify-content: space-around;
             align-items: center;
-            background-color: var(--color-3);
+            background-color: var(--color--1);
             height: var(--footer-height);
             transition: var(--fullscreen-transition);
 
@@ -168,7 +110,8 @@ body {
                 &.active {
                     >.icon-container {
                         width: 50px;
-                        background-color: var(--color-1);
+                        background-color: var(--color--2);
+                        color: var(--color--3);
                     }
                 }
             }
@@ -210,7 +153,7 @@ body {
             bottom: calc(0px - var(--max-height));
             width: 100vw;
             max-height: var(--max-height);
-            background-color: var(--color-3);
+            background-color: var(--color--1);
             overflow: hidden;
             height: 300px;
             padding: 30px;
