--- a/src/components/apps/cm/col/com/Com.scss
+++ b/src/components/apps/cm/col/com/Com.scss
@@ -34,7 +34,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: var(--color-3);
+            background: var(--color--1);
             border-radius: 50%;
             width: var(--size);
             height: var(--size);
