--- a/src/components/apps/cm/col/com/face/ComFace.scss
+++ b/src/components/apps/cm/col/com/face/ComFace.scss
@@ -1,6 +1,6 @@
 .com-face-context-menu {
     padding: 10px 10px;
-    background: var(--color-2);
+    background: var(--color--1);
     box-shadow: 0 0 40px #ccc;
     border-radius: 10px;
 
