--- a/src/components/apps/cm/lists/Lists.scss
+++ b/src/components/apps/cm/lists/Lists.scss
@@ -7,7 +7,7 @@
             min-height: 120px;
             margin: var(--thematic-item-gap-v) 0;
             border-radius: 10px;
-            background-color: var(--color-1);
+            background-color: var(--color--2);
             width: 100%;
             padding-bottom: 10px;
             overflow: auto;
