--- a/src/index.scss
+++ b/src/index.scss
@@ -1,21 +1,9 @@
 body {
-  margin: 0;
-  --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  --font-family: -apple-system, montserrat, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', main,
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: var(--font-family);
-
-
-  --font-size: 16px;
-  --com-player-signaler-size: 50px;
-
-  --color-1: #e6e4c0;
-  --color-2: #e7edde;
-  --color-3: #f2f0e0;
-  --color-4: #4f4e46;
-  --color-5: #1d192b;
 
   --main-gap: 8px;
   --main-big-gap: 18px;
@@ -29,9 +17,37 @@ body {
   --header-container-top: var(--header-height);
   --footer-bottom: 0;
 
-  --svg-color: var(--color-4);
+  --color--1: #242a26;
+  --color--2: #3b4b40;
+  --color--3: #d5e6d6;
+  --color--4: #b2b9b1;
+  --color--5: #1a1c19;
+  --color--6: #d3e5d7;
+  --color--7: #b5f2c8;
+  --color--8: var(--color--5);
 
-  background-color: var(--color-2);
+  &.light-theme {
+    --color--1: #eaf1e9;
+    --color--2: #d5e8d5;
+    --color--3: #122217;
+    --color--4: #414840;
+    --color--5: #fbfdf8;
+    --color--6: #f8fbf4;
+    --color--7: #336a4a;
+    --color--8: #fbfdf8;
+  }
+}
+
+body {
+  --svg-color: var(--color--4);
+
+  background-color: var(--color--5);
+  font-family: var(--font-family);
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  font-size: 16px;
 }
 
 * {
@@ -41,7 +57,6 @@ body {
 :not(svg) {
   box-sizing: border-box;
 }
-
 
 .ellipsis {
   white-space: nowrap;
@@ -94,12 +109,10 @@ input {
   opacity: .7;
 }
 
-
 ::-webkit-scrollbar {
   width: 2px;
   height: 2px;
 }
-
 
 ::-webkit-scrollbar-thumb {
   background-color: darkgrey;
@@ -110,8 +123,6 @@ input {
   display: none;
 }
 
-
-
 :not(.user-select) {
   -moz-user-select: none;
   -webkit-user-select: none;
@@ -119,673 +130,37 @@ input {
   user-select: none;
 }
 
+@font-face {
+  font-family: main;
+  src: url(./resource/avenir-next.ttf);
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.old-version {
-  body.light-theme {
-    --color-ok-6: #587455;
-    --color-ok-4: #b6d285;
-
-    --color-far: var(--color-dark);
-    --color-near: var(--color-light);
-
-    --color-light-near: #e3f0e933;
-    --color-light-far: #0f1a1033;
-
-    background-color: var(--color-near);
+#root {
+  .main-gap-v {
+    margin-left: var(--main-gap);
+    margin-right: var(--main-gap);
   }
 
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
+  .main-gap-h {
+    margin-top: var(--main-gap);
+    margin-bottom: var(--main-gap);
   }
 
-
-
-
-  body {
-    --color-base-1: #8aae7e;
-    --color-base-3: rgb(138, 174, 126);
-    --color-base-2: #12441f;
-
-    --color-ok-1: #3f3d10;
-    --color-ok-2: #38462c;
-    --color-ok-3: #585a3c;
-    --color-ok-4: #587455;
-    --color-ok-5: #7cae7d;
-    --color-ok-6: #b6d285;
-
-    --color-ko-1: #ae3112;
-    --color-ko-2: #bf4502;
-    --color-ko-3: #da3a03;
-    --color-ko-4: #e34d3f;
-    --color-ko-5: #ef5b28;
-    --color-ko-6: #f77f50;
-
-    --color-no-1: #082d3f;
-    --color-no-2: #1a2f52;
-    --color-no-3: #354c77;
-    --color-no-4: #206a83;
-    --color-no-5: #67c7f2;
-    --color-no-6: #bbdcff;
-
-    --color-br-1: #342222;
-    --color-br-2: #47271b;
-    --color-br-3: #523b2f;
-    --color-br-4: #6f5035;
-    --color-br-5: #aa8963;
-    --color-br-6: #cdae97;
-
-    --color-light: #e3f0e9;
-    --color-dark: #0f1a10;
-
-    --color-near: var(--color-dark);
-    --color-far: var(--color-light);
-
-    --color-light-far: #e3f0e933;
-    --color-light-near: #0f1a1033;
-
-
-    --color-accent: #8e9f43;
-    --color-primary: #0f1a10;
-    --color-primary-dark: #38462c;
-    --color-dark-gray: #555;
-    --color-light-gray: #ddd;
-    --color-gray: #999;
-
-    background-color: var(--color-primary);
-
-
-    --between-mgroped: .5px;
-    --opacity-default: .80;
-    --opacity-active: .99;
-    --size-font-base: 20px;
-    --radius-border-1-3: 1.3em;
-    --radius-border-2-4: .7em;
-
-    --svg-color: var(--color-far);
-    color: var(--color-far);
+  .main-gap {
+    margin: var(--main-gap);
   }
 
-  body {
-    --between-mgroped: .5px;
-    --opacity-default: .80;
-    --opacity-active: .99;
-    --size-font-base: 20px;
-    --radius-border-1-3: 1.3em;
-    --radius-border-2-4: .7em;
-
-    --svg-color: var(--color-far);
-    color: var(--color-far);
-
-    &.light-theme {
-      --color-ok-6: #587455;
-      --color-ok-4: #b6d285;
-
-      --color-far: var(--color-dark);
-      --color-near: var(--color-light);
-
-      --color-light-near: #e3f0e933;
-      --color-light-far: #0f1a1033;
-    }
+  .main-big-gap-v {
+    margin-left: var(--main-big-gap);
+    margin-right: var(--main-big-gap);
   }
 
-  body {
-    background-color: var(--color-near);
-
-    :not(.user-select) {
-      -moz-user-select: none;
-      -webkit-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    & .user-select,
-    & .user-select * {
-      -moz-user-select: text;
-      -webkit-user-select: text;
-      -ms-user-select: text;
-      user-select: text;
-    }
+  .main-big-gap-h {
+    margin-top: var(--main-big-gap);
+    margin-bottom: var(--main-big-gap);
   }
 
-  html,
-  body {
-    padding: 0;
-    margin: 0;
-
-    width: 100vw;
-    height: 100vh;
-    font-family: main;
-  }
-
-  @font-face {
-    font-family: main;
-    src: url(./resource/avenir-next.ttf);
-  }
-
-  .mdisabled,
-  :disabled {
-    filter: brightness(.5);
-    pointer-events: none;
-  }
-
-  .mupper {
-    text-transform: uppercase;
-  }
-
-  .scrollable {
-    overflow: auto;
-
-    &,
-    &-x,
-    &-y {
-      &.no-scroll::-webkit-scrollbar {
-        display: none;
-      }
-    }
-
-    &,
-    &-x {
-      max-width: 100%;
-    }
-
-    &,
-    &-y {
-      max-height: 100%;
-    }
-
-    &-x {
-      overflow-x: auto;
-    }
-
-    &-y {
-      overflow-y: auto;
-    }
-  }
-
-  .mbtn {
-    --svg-color: var(--color-dark);
-
-    display: inline-block;
-    vertical-align: middle;
-    border: none;
-    outline: 0;
-    padding: 3px 1em;
-    height: 2em;
-    font-size: 1em;
-    opacity: var(--opacity-default);
-    box-sizing: border-box;
-    background-color: #cccc;
-    cursor: pointer;
-    color: var(--color-dark);
-
-    >svg {
-      margin-top: -3px;
-      width: var(--size);
-      height: calc(var(--size) * 1.7);
-    }
-  }
-
-  .mactive {
-    filter: brightness(1.3);
-    opacity: var(--opacity-active);
-  }
-
-  .mgroup {
-    display: inline-block;
-    white-space: nowrap;
-
-    :not(&)>.mbtn {
-      border-radius: var(--radius-border-1-3) var(--radius-border-2-4);
-
-      &:not(.mblock) {
-        margin: .15em;
-      }
-    }
-
-    >*:first-child {
-      border-top-left-radius: var(--radius-border-1-3);
-      border-bottom-left-radius: var(--radius-border-2-4);
-      margin-right: var(--between-mgroped);
-    }
-
-    >*:last-child {
-      border-top-right-radius: var(--radius-border-2-4);
-      border-bottom-right-radius: var(--radius-border-1-3);
-      margin-left: var(--between-mgroped);
-    }
-
-    >*:not(:last-child):not(:first-child) {
-      border-radius: 0;
-      margin-left: var(--between-mgroped);
-      margin-right: var(--between-mgroped);
-    }
-  }
-
-  .minput {
-    position: relative;
-    border: none;
-    outline: 0;
-    border-radius: var(--radius-border-1-3) var(--radius-border-2-4);
-    padding: .01em 1em;
-    font-size: 1em;
-    height: 1.75em;
-    //margin: .15em;
-    opacity: var(--opacity-default);
-  }
-
-  .cleared-input {
-    padding-right: 1em;
-
-    +.clear-button {
-      position: relative;
-      display: block;
-      bottom: 2em;
-      left: calc(100% - 1.5em);
-      width: 0;
-      height: 0;
-      cursor: pointer;
-
-      &:after {
-        content: '×';
-        display: inline-block;
-        color: var(--color);
-        font-weight: bold;
-        font-size: 1.5em;
-      }
-    }
-  }
-
-  .mblock {
-    width: 100%;
-
-    &,
-    .mgroup {
-      display: inline-block;
-      margin: .15em 0;
-    }
-  }
-
-  .mprogressed {
-
-    &:before,
-    &:after {
-      position: absolute;
-      display: block;
-    }
-
-    &:before {
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      background-color: #0007;
-    }
-  }
-
-
-  .m--ok {
-    background-color: var(--color-ok-2);
-
-    &,
-    &+.clear-button {
-      color: var(--color-ok-5);
-    }
-  }
-
-  .m-ok {
-    background-color: var(--color-ok-5);
-    color: var(--color-ok-2);
-  }
-
-
-  .m--br {
-    background-color: var(--color-br-2);
-
-    &,
-    &+.clear-button {
-      color: var(--color-br-5);
-    }
-  }
-
-  .m-br {
-    background-color: var(--color-br-5);
-    color: var(--color-br-2);
-  }
-
-
-  .m--ko {
-    background-color: var(--color-ko-1);
-
-    &,
-    &+.clear-button {
-      color: var(--color-ko-6);
-    }
-  }
-
-  .m-ko {
-    background-color: var(--color-ko-6);
-    color: var(--color-ko-1);
-  }
-
-
-  .m--no {
-    background-color: var(--color-no-2);
-
-    &,
-    &+.clear-button {
-      color: var(--color-no-5);
-    }
-  }
-
-  .m-no {
-    background-color: var(--color-no-5);
-    color: var(--color-no-2);
-  }
-
-  .mgroup>.mbtn {
-    min-width: calc(var(--size) * 2);
-    max-height: calc(var(--size) * 1.712);
-  }
-
-  .mxs,
-  .msm,
-  .mmd,
-  .mlg {
-    min-width: calc(var(--size) * 2);
-    max-height: calc(var(--size) * 1.712);
-
-    &,
-    &+.clear-button {
-      font-size: var(--size);
-    }
-  }
-
-  .mxs {
-
-    &.mgroup>.mbtn,
-    & {
-
-      &,
-      &+.clear-button {
-        --size: 10px;
-      }
-    }
-  }
-
-  .msm {
-
-    &.mgroup>.mbtn,
-    & {
-
-      &,
-      &+.clear-button {
-        --size: 15px;
-      }
-    }
-  }
-
-  .mmd {
-
-    &.mgroup>.mbtn,
-    & {
-
-      &,
-      &+.clear-button {
-        --size: 20px;
-      }
-    }
-  }
-
-  .mlg {
-
-    &.mgroup>.mbtn,
-    & {
-
-      &,
-      &+.clear-button {
-        --size: 30px;
-      }
-    }
-  }
-
-
-
-  .file-system {
-    &.background-mode {
-      .commit-files-button {
-        position: absolute;
-        right: 5px;
-        bottom: 5px;
-        font-size: 1rem;
-      }
-    }
-  }
-
-  .app-modal-window {
-    z-index: 300;
-  }
-
-  .modal-toast {
-    position: absolute;
-    bottom: 10px;
-
-  }
-
-  .app-toast-window.toast {
-    position: absolute;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    user-select: none;
-  }
-
-  .app-toast-window.toast>.toast-line {
-    position: absolute;
-    display: flex;
-    justify-content: space-around;
-    bottom: 12vh;
-    width: 100%;
-  }
-
-  .app-toast-window.toast>.toast-line>.toast {
-    display: inline-block;
-    padding: 10px;
-    border-radius: 5px;
-    margin: auto;
-    background-color: var(--color-light-gray);
-    color: var(--color-dark-gray);
-    max-width: calc(100% - 10px);
-    max-height: calc(100vh - 10px);
-    pointer-events: all;
-  }
-
-  .app-modal-window {
-    position: absolute;
-    z-index: 199;
-    display: flex;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-
-    ::-webkit-scrollbar {
-      display: none;
-    }
-
-    >.app-modal {
-      display: inline-block;
-      margin: auto;
-      width: 500px;
-      min-height: max-content;
-      max-height: calc(100vh - 10px);
-      max-width: calc(100vw - 10px);
-      border: solid 1px #ddd;
-      border-radius: 5px;
-      background-color: var(--color-ok-6);
-
-      >.app-modal-title {
-        display: flex;
-        justify-content: space-between;
-        background-color: var(--bgcolor-title);
-        color: var(--color-primary);
-        padding: 5px;
-        max-height: 2em;
-
-        >.app-modal-title-close-icon {
-          cursor: pointer;
-          font-weight: bolder;
-        }
-      }
-
-      >.app-modal-body {
-        padding: 0px 5px;
-        max-height: calc(100vh - 5em);
-        overflow-y: auto;
-        overflow-x: hidden;
-
-        &.with-error {
-          max-height: calc(100% - 6.2em);
-        }
-
-        >.app-modal-body-inner {
-          >.app-modal-description {
-            padding: 10px 0;
-          }
-
-          >.app-modal-body-input-list {
-            padding: 10px 0;
-
-            >.app-modal-body-input-list-item>.app-modal-body-input-list-item-input {
-              width: 100%;
-              min-height: 2em;
-              outline: none;
-            }
-          }
-        }
-      }
-
-      >.app-modal-footer {
-        >.app-modal-footer-error {
-          padding: 0px 5px;
-          color: red;
-        }
-
-        >.app-modal-footer-button-list {
-          overflow-x: auto;
-          overflow-y: hidden;
-          height: 1.5em;
-          padding: 10px 5px;
-
-          >.app-modal-footer-button-list-inner {
-            display: inline-block;
-            white-space: nowrap;
-
-            >.app-modal-footer-button-list-item {
-              border: solid 1px #999;
-              border-radius: 3px;
-              background-color: #ccc;
-              outline: none;
-              margin: 0 2px;
-            }
-          }
-        }
-      }
-    }
-  }
-
-
-
-  .flex {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-  }
-
-  .flex-center {
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-  }
-
-  .flex-start {
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: start;
-    align-items: flex-start;
-  }
-
-  .flex-middle {
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-  }
-
-  .flex-baseline {
-    -webkit-box-align: baseline;
-    -webkit-align-items: baseline;
-    -ms-flex-align: baseline;
-    align-items: baseline;
-  }
-
-  .flex-end {
-    -webkit-box-align: end;
-    -webkit-align-items: flex-end;
-    -ms-flex-align: end;
-    align-items: flex-end;
-  }
-
-  .flex-horizontal-end {
-    -webkit-box-pack: end;
-    -webkit-justify-content: flex-end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
-  }
-
-  .flex-between {
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-  }
-
-  .flex-column {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-
-  .flex-row {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
+  .main-big-gap {
+    margin: var(--main-big-gap);
   }
 }
