--- a/src/components/apps/cm/col/com/face/ComFace.scss
+++ b/src/components/apps/cm/col/com/face/ComFace.scss
@@ -1,7 +1,7 @@
 .com-face-context-menu {
     padding: 10px 10px;
     background: var(--color--1);
-    box-shadow: 0 0 40px #ccc;
+    box-shadow: 0 0 40px var(--color--2);
     border-radius: 10px;
 
     .item {
