--- a/src/components/apps/cm/col/cat/Cat.scss
+++ b/src/components/apps/cm/col/cat/Cat.scss
@@ -21,6 +21,7 @@
                 outline: 0;
                 border: 0;
                 background: none;
+                color: var(--text-color);
             }
 
             .clear-button {
